# agent-financials

./: Dockerfile  README.md  app.py  pyproject.toml  test_tools.py
.github/workflows/: deploy.yml
a2a/: agent_card.py
a2a_service/: agent_card.py  executor.py  server.py
agents/: agent.py
charts/: data.py
database/: memory.py  mongo.py  vector_db.py
tools/: bse_nse_reports.py  db_tools.py  firecrawl_tool.py  investment_report.py  tavily_tool.py  yfinance_tool.py
